force-app/main/default/objects/PackingSlipItem__c/PackingSlipItem__c.object-meta.xml
<CustomObject>
    <label>Packing Slip Item</label>
    <nameField>
        <displayFormat>PSI{000000}</displayFormat>
        <label>Packing Slip Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Slip Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>