force-app/main/default/objects/PackingSlipItem__c/fields/OrderItemDimensions__c.field-meta.xml
<CustomField>
    <fullName>OrderItemDimensions__c</fullName>
    <formula>OrderProduct__r.Dimensions__c</formula>
    <label>Dimensions</label>
    <type>Text</type>
</CustomField>