force-app/main/default/objects/PackingSlipItem__c/fields/OrderItemLineDescriptionLink__c.field-meta.xml
<CustomField>
    <fullName>OrderItemLineDescriptionLink__c</fullName>
    <formula>OrderProduct__r.LineDescriptionLink__c</formula>
    <label>Line Description</label>
    <type>Text</type>
</CustomField>