force-app/main/default/objects/PackingSlipItem__c/fields/PackingSlip__c.field-meta.xml
<CustomField>
    <fullName>PackingSlip__c</fullName>
    <label>Packing Slip</label>
    <referenceTo>PackingSlip__c</referenceTo>
    <relationshipLabel>Packing Slip Items</relationshipLabel>
    <relationshipName>PackingSlipItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>