force-app/main/default/objects/PackingSlipItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF(ISBLANK( OrderProduct__r.Product2Id ), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp; OrderProduct__r.Product2Id, OrderProduct__r.Product2.Name, &quot;_blank&quot;))</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>